Все доделано и исправлено

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
       </div>
     </header>
     <main>
+      <div class="search-categories">
+        <label>Search categories</label>
+        <select id="categorieslist"></select>
+      </div>
+      
       <div class="categories">
         <div class="categories-cards" data-categories="men's clothing">
           <h3 class="categories-header">Men's clothing</h3>
@@ -52,7 +57,7 @@
       <h2>Catalog</h2>
       <div id="productList"></div>
       <button class="download-more">Download more</button>
-      <aside class="addNewProduct">
+      <div class="addNewProduct">
         <h2>Add New Product</h2>
         <form id="addProductForm">
           <input type="text" id="productTitle" placeholder="Title" required />
